<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SecurePhoto</string>
    <string name="capture_photo">Capture photo</string>
    <string name="share">Share</string>
    <string name="input_password">Input password</string>
    <string name="commit_new_password">Commit new password</string>
    <string name="choose_new_password">Choose your new password</string>

    <!--==========   MENU   ===========-->
    <string name="unsecure">Make unsecure</string>
    <string name="delete">Delete</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="cab_title_select_items">Select items</string>
    <string name="done">Done</string>
    <plurals name="selected_items">
        <item quantity="one">One item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>

    <!--========= TITLES ==========-->
    <string name="secured">Safe Place</string>
    <string name="gallery">Gallery</string>

    <!--========= BUTTONS ==========-->
    <string name="btn_done">Done</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_category_privacy">Privacy settings</string>
    <string name="settings_item_change_password">Change password</string>
    <string name="start_greetings">Your Safe Place</string>
    <string name="label_settings">Settings</string>

    <!--========= Change Password settings ==========-->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_successfully_changed">Password successfully changed</string>

    <!--========= Notification ==========-->
    <string name="restoring_in_progress">Restoring in progress</string>
    <string name="restoring_completed">Restoring completed</string>
    <string name="settings_category_system">System</string>
    <string name="settings_item_change_algorithm">Change cipher algorithm</string>

</resources>
