<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/old_password"
        android:background="@drawable/edit_text"
        android:layout_width="240dp"
        android:layout_height="@dimen/tap_item_dimen"
        android:inputType="textPassword"
        android:hint="@string/old_password"
        android:textColorHint="@color/text_hint"
        android:layout_marginBottom="@dimen/unit3" />

    <EditText
        android:id="@+id/new_password"
        android:background="@drawable/edit_text"
        android:layout_width="240dp"
        android:layout_height="@dimen/tap_item_dimen"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:textColorHint="@color/text_hint"
        android:layout_marginBottom="@dimen/unit3" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:background="@drawable/edit_text"
        android:layout_width="240dp"
        android:layout_height="@dimen/tap_item_dimen"
        android:inputType="textPassword"
        android:hint="@string/confirm_new_password"
        android:textColorHint="@color/text_hint"
        android:layout_marginBottom="@dimen/unit3" />

    <Button
        android:id="@+id/commitButton"
        android:background="@drawable/btn_basic"
        android:layout_width="240dp"
        android:layout_height="@dimen/tap_item_dimen"
        android:layout_margin="16dp"
        android:text="@string/btn_done"
        android:textColor="@color/text_white"
        android:textAllCaps="true" />

</LinearLayout>